[gd_scene load_steps=30 format=2]

[ext_resource path="res://Cards/Card.gd" type="Script" id=1]
[ext_resource path="res://Cards/AditionalFeatures.gd" type="Script" id=2]
[ext_resource path="res://Tools/Execution.tscn" type="PackedScene" id=3]
[ext_resource path="res://Grid/CardIndicators/Left.png" type="Texture" id=4]
[ext_resource path="res://Grid/CardIndicators/Right.png" type="Texture" id=5]
[ext_resource path="res://Grid/CardIndicators/RightDown.png" type="Texture" id=6]
[ext_resource path="res://Tools/NewEffectManager.tscn" type="PackedScene" id=7]
[ext_resource path="res://Grid/CardIndicators/UpLeft.png" type="Texture" id=8]
[ext_resource path="res://Grid/CardIndicators/Arrow.png" type="Texture" id=9]
[ext_resource path="res://Grid/CardIndicators/Around.png" type="Texture" id=10]
[ext_resource path="res://Grid/CardIndicators/Sword.png" type="Texture" id=11]
[ext_resource path="res://Grid/CardIndicators/Down.png" type="Texture" id=12]
[ext_resource path="res://Grid/CardIndicators/RightUp.png" type="Texture" id=13]
[ext_resource path="res://Grid/CardIndicators/SplashDown.png" type="Texture" id=14]
[ext_resource path="res://Grid/CardIndicators/SplashLeft.png" type="Texture" id=15]
[ext_resource path="res://Grid/CardIndicators/Up.png" type="Texture" id=16]
[ext_resource path="res://Grid/CardIndicators/SplashRight.png" type="Texture" id=17]
[ext_resource path="res://Grid/CardIndicators/SplashUp.png" type="Texture" id=18]
[ext_resource path="res://Grid/CardIndicators/LeftDown.png" type="Texture" id=19]
[ext_resource path="res://Grid/Test2.png" type="Texture" id=20]
[ext_resource path="res://Artifacts(and RougeManager)/RelicLoader.tscn" type="PackedScene" id=21]
[ext_resource path="res://UI/CardDescription.tscn" type="PackedScene" id=22]
[ext_resource path="res://icon.png" type="Texture" id=23]
[ext_resource path="res://Cards/Indicators.gd" type="Script" id=24]
[ext_resource path="res://Assets/Снимок экрана 2023-10-30 200726.png" type="Texture" id=25]
[ext_resource path="res://Tools/CardToolManager.tscn" type="PackedScene" id=26]
[ext_resource path="res://Tools/Parameters.tscn" type="PackedScene" id=27]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 73.5, 105 )

[sub_resource type="TileSet" id=2]
0/name = "Arrow.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 21, 21 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Sword.png 1"
1/texture = ExtResource( 11 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Around.png 2"
2/texture = ExtResource( 10 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 21, 21 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Down.png 3"
3/texture = ExtResource( 12 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Left.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Right.png 5"
5/texture = ExtResource( 5 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "RightDown.png 6"
6/texture = ExtResource( 6 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "RightLeft.png 7"
7/texture = ExtResource( 8 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "RightUp.png 8"
8/texture = ExtResource( 13 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Up.png 9"
9/texture = ExtResource( 16 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "SplashDown.png 10"
10/texture = ExtResource( 14 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "SplashRight.png 11"
11/texture = ExtResource( 17 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 16, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "SplashUp.png 12"
12/texture = ExtResource( 18 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 16, 16 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "SplashLeft.png 13"
13/texture = ExtResource( 15 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 16, 16 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "LeftDown.png 14"
14/texture = ExtResource( 19 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 16, 16 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0

[node name="Card" type="Node2D"]
process_priority = 5
script = ExtResource( 1 )
card_execution = ExtResource( 3 )

[node name="Parameters" parent="." instance=ExtResource( 27 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 20 )
centered = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 73.5, 105 )
shape = SubResource( 1 )

[node name="СнимокЭкрана2023-10-30200726" type="Sprite" parent="."]
position = Vector2( 73.5, 62 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 25 )

[node name="Indicators" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 21, 21 )
centered_textures = true
format = 1
tile_data = PoolIntArray( 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0 )
script = ExtResource( 24 )

[node name="CardDescription" parent="." instance=ExtResource( 22 )]
modulate = Color( 1, 1, 1, 0.917647 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 13.0
margin_top = 106.0
margin_right = 138.0
margin_bottom = 166.0

[node name="Energy" parent="CardDescription" index="1"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 117.0
margin_top = 72.0
margin_right = 181.0
margin_bottom = 136.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 23 )

[node name="Label" parent="CardDescription/Energy" index="0"]
margin_left = -30.0
margin_top = -34.0
margin_right = -30.0
margin_bottom = -34.0
rect_scale = Vector2( 2, 2 )

[node name="CardToolManager" parent="." instance=ExtResource( 26 )]

[node name="AditionalFeatures" type="Node" parent="."]
script = ExtResource( 2 )
features = {
"exhaust": false,
"no queue": false
}
feature_description = {
"exhaust": "removes card from deck until the end of the battle",
"no queue": "card gets drawn first"
}

[node name="RelicLoader" parent="." instance=ExtResource( 21 )]

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = -15.0
margin_top = 2.0
margin_right = 15.0
margin_bottom = 211.0
mouse_filter = 2
custom_constants/vseparation = 38

[node name="NewEffectManager" parent="." instance=ExtResource( 7 )]

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]

[editable path="CardDescription"]
